--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario con ValidacióN Avanzada </title>
+    <title>Formulario con Validación Avanzada </title>
     <link rel="stylesheet" href="./_CSS/styles.css">
 </head>
 
@@ -43,7 +43,8 @@
             <div class="form-group">
                 <label for="correo">Correo Electronico:</label>
                 <input type="email" id="correo" name="correo" required placeholder="usuario@dominio.com"
-                    pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{5,50}$">
+                    pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{5,50}$"
+                    oncopy="return false" oncut="return false" onpaste="return false" >
 
                 <div class="mensaje-error" id="errorCorreo"></div>
                 <div class="mensaje-exito" id="exitoCorreo"></div>
@@ -53,7 +54,8 @@
 
             <div class="form-group">
                 <label for="confirmarCorreo">Confirmar correo electrónico:</label>
-                <input type="email" id="confirmarCorreo" name="confirmarCorreo" required placeholder="Repite tu correo">
+                <input type="email" id="confirmarCorreo" name="confirmarCorreo" required placeholder="Repite tu correo"
+                oncopy="return false" oncut="return false" onpaste="return false">
                 <div class="mensaje-error" id="errorConfirmarCorreo"></div>
                 <div class="mensaje-exito" id="exitoConfirmarCorreo"></div>
             </div>
@@ -129,7 +131,14 @@
         </form>
     </div>
 
+    <div id="resumenDatos"
+        style="display: none; padding: 20px; margin-top: 30px; background-color: #f1f1f1; border-radius: 10px;">
+        <h2>Resumen de datos enviados:</h2>
+        <div id="contenidoResumen"></div>
+    </div>
+
     <script src="./_JS/script.js"></script>
+
 
 </body>
 
